--- a/src/styles/fone.css
+++ b/src/styles/fone.css
@@ -104,8 +104,9 @@ main > section {
     left: 91%;
     top: 1;
     padding: 5px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 10px;
+    color: white;
 }
 
 .fundoDeVidro{
